--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ nav ul {
 }
 
 .heroImageProject {
-    background-image: url('assets/buildings/54 shore drive/gallery.jpg');
+    background-image: url('assets/buildings/54 Shore drive/gallery.jpg');
     min-height: 100vh;
     background-attachment: fixed;
     background-position: center;
