--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ nav ul {
 }
 
 .heroImageA {
-    background: url('assets/buildings/54 shore drive/gallery.jpg') no-repeat center center fixed;
+    background: url('assets/buildings/54 Shore Drive/gallery.jpg') no-repeat center center fixed;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
