--- a/styles.css
+++ b/styles.css
@@ -210,19 +210,31 @@ nav ul {
 .heroImageB {
     background-image: url('assets/buildings/River Line/gallery.jpg');
     min-height: 100vh;
-    /* background-attachment: fixed; */
+    background-attachment: fixed;
     background-position: center;
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     background-size: cover;
     filter: saturate(130%);
 }
 
 .heroImageC {
-    background-image: url('assets/buildings/River Line/building F view_1.jpg');
+    background-image: url('assets/buildings/River Line/building F view_7.1.jpg');
     min-height: 100vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+    filter: saturate(130%);
+}
+
+.heroImageD {
+    background: url('assets/buildings/Miceli Stable/gallery.jpg') no-repeat center center fixed;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     filter: saturate(130%);
 }
