--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ nav ul {
 .heroImageB {
     background-image: url('assets/buildings/River Line/gallery.jpg');
     min-height: 100vh;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
