--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ nav ul {
     /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
     filter: saturate(130%);
 }
 
