--- a/styles.css
+++ b/styles.css
@@ -214,8 +214,7 @@ nav ul {
     background-image: url('assets/buildings/River Line/gallery.jpg');
     min-height: 100vh;
     max-width: calc(100%);
-    /* height: 100%; */
-    /* background-attachment: fixed; */
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -225,7 +224,7 @@ nav ul {
 .heroImageC {
     background-image: url('assets/buildings/River Line/building F view_7.1.jpg');
     min-height: 100vh;
-    max-width: calc(100%);
+    max-width: calc(100vw);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
