miceli farms in

--- a/styles.css
+++ b/styles.css
@@ -307,16 +307,16 @@ nav ul {
     background-image: url('assets/buildings/Miceli Stable/gallery.jpg');
 }
 .project4HeroImage.a {
-    background-image: url('assets/buildings/River Line/building F view_10.jpg');
+    background-image: url('assets/buildings/Miceli Stable/Miceli stable-render-2.jpg');
 }
 .project4HeroImage.b {
-    background-image: url('assets/buildings/River Line/building F view_9.jpg');
+    background-image: url('assets/buildings/Miceli Stable/scene5.jpg');
 }
 .project4HeroImage.c {
-    background-image: url('assets/buildings/River Line/building F view_8.1.jpg');
+    background-image: url('assets/buildings/Miceli Stable/scene6.jpg');
 }
 .project4HeroImage.d {
-    background-image: url('assets/buildings/River Line/building F view_3.jpg');
+    background-image: url('assets/buildings/Miceli Stable/miceli construction.jpg');
 }
 
 .heroText {
