--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: landscape) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
         min-height: 100vh;
         max-width: calc(100%);
         background-attachment: fixed;
@@ -69,7 +69,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: portrait) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
         min-height: 100vh;
         max-width: calc(100%);
         background-position: center;
@@ -335,6 +335,24 @@ nav ul {
 }
 .project5HeroImage.d {
     background-image: url('assets/buildings/Benkert Residence');
+}
+
+/* Project 6 */
+/* 4 Lori Lane */
+.project6HeroImage {
+    background-image: url('assets/buildings/Atieh Residence/4 Lori Ln.jpg');
+}
+.project6HeroImage.a {
+    background-image: url('assets/buildings/Atieh Residence/ATIEH_view_3.jpg');
+}
+.project6HeroImage.b {
+    background-image: url('assets/buildings/Atieh Residence/Atieh view 5.jpg');
+}
+.project6HeroImage.c {
+    background-image: url('assets/buildings/Atieh Residence');
+}
+.project6HeroImage.d {
+    background-image: url('assets/buildings/Atieh Residence');
 }
 
 .heroText {
