--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: landscape) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
         min-height: 100vh;
         max-width: calc(100%);
         background-attachment: fixed;
@@ -69,7 +69,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: portrait) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
         min-height: 100vh;
         max-width: calc(100%);
         background-position: center;
@@ -354,6 +354,24 @@ nav ul {
 }
 .project6HeroImage.d {
     background-image: url('assets/buildings/Atieh Residence');
+}
+
+/* Project 7 */
+/* 1101 Barkley Road */
+.project7HeroImage {
+    background-image: url('assets/buildings/Gajewski Residence/gallery.jpg');
+}
+.project7HeroImage.a {
+    background-image: url('assets/buildings/Gajewski Residence/1101 before.jpg');
+}
+.project7HeroImage.b {
+    background-image: url('assets/buildings/Gajewski Residence/Gajewski view 1.jpg');
+}
+.project7HeroImage.c {
+    background-image: url('assets/buildings/Gajewski Residence/Gajewski view 3.jpg');
+}
+.project7HeroImage.d {
+    background-image: url('assets/buildings/Gajewski Residence/Gajewski view 6.jpg');
 }
 
 .heroText {
