--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: landscape) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD, .heroImageE {
         min-height: 100vh;
         max-width: calc(100%);
         background-attachment: fixed;
@@ -69,7 +69,7 @@ src: local('Optima Bold'), url('fonts/optima/OPTIMA_B.woff') format('woff');
 }
 
 @media (orientation: portrait) {
-    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD {
+    .project1HeroImage, .project2HeroImage, .project3HeroImage, .project4HeroImage, .project5HeroImage, .project6HeroImage, .project7HeroImage, .heroImageA, .heroImageB, .heroImageC, .heroImageD, .heroImageE {
         min-height: 100vh;
         max-width: calc(100%);
         background-position: center;
@@ -246,6 +246,9 @@ nav ul {
 }
 .heroImageD {
     background-image: url('assets/buildings/Miceli Stable/gallery.jpg');
+}
+.heroImageE {
+    background-image: url('assets/hitters.jpg');
 }
 
 /* Project 1 */
