--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,7 @@ nav ul {
 
 /* Project 3 */
 /* Building F */
-.project3HeroImage {
+/* .project3HeroImage {
     background-image: url('assets/buildings/River Line/gallery.jpg');
 }
 .project3HeroImage.a {
@@ -303,7 +303,7 @@ nav ul {
 }
 .project3HeroImage.d {
     background-image: url('assets/buildings/River Line/building F view_7.1.jpg');
-}
+} */
 
 /* Project 4 */
 /* Miceli Farms */
